finished profile page fixed sidebar script and added scrollbar style

--- a/css/framework.css
+++ b/css/framework.css
@@ -417,4 +417,8 @@ a {
     .txt-small-center {
         text-align: center;
     }
+    .respo {
+        flex-direction: column;
+        text-align: center;
+    }
 }
